# flop

./: Cargo.toml  README.md
fixtures/: a.ar  a.cpio  a.tar
src/: ar.rs  cpio.rs  lib.rs  tar.rs  util.rs  zip.rs
