[package]
name = "flop"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "floppy-disk facades for common archive formats!"
repository = "https://github.com/queer/flop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
async-recursion = "1.0.4"
async-trait = "0.1.68"
async_zip = { version = "0.0.15", features = ["tokio", "tokio-fs", "chrono"] }
chrono = "0.4.26"
cpio = "0.2.2"
cpio_reader = "0.1.1"
debug-ignore = "1.0.5"
disk-drive = "0.1.2"
floppy-disk = "0.2.3"
futures = "0.3.28"
nyoom = "0.3.5"
paste = "1.0.12"
rand = "0.8.5"
smoosh = "0.2.0"
test-log = { version = "0.2.12", features = ["trace"] }
tokio = { version = "1.28.2", features = ["sync", "rt", "macros"] }
tokio-tar-up2date = "0.3.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json", "time", "tracing", "env-filter", "local-time", "fmt", "std", "json"] }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.12"
tracing-subscriber = "0.3.17"
